@@ -210,10 +210,8 @@ CString CWhiteNoteDoc::GetXMLFromMXL(CString MXLFilePath)
 // Reads the XML File stored in FilePath
 bool CWhiteNoteDoc::ReadXMLFile(CString FilePath)
 {
-	bool	bShowDetailedText = (theApp.GetProfileInt(L"Defaults", L"DetailedText", 1) == 1);
-
 	return CMusicXMLParser().ParsXML(FilePath, m_MusicSheet) &&
-		   CMusicSheetNarrator().ConvertToText(m_MusicSheet, m_Narration, bShowDetailedText);
+		   CMusicSheetNarrator().ConvertToText(m_MusicSheet, m_Narration);
 }
 
 // Reloads a document to reflect external or settings changes.
